[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rebase-plot-style"
version = "0.1.0"
description = "Rebase matplotlib style for presentations"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib"
]

[tool.setuptools]
packages = ["rebase_plot_style"]
include-package-data = true

[tool.setuptools.package-data]
rebase_plot_style = ["*.mplstyle"]